[gd_scene load_steps=5 format=3 uid="uid://bd3370bfm5igk"]

[ext_resource type="Script" path="res://Prog58b.gd" id="1_1e3dx"]

[sub_resource type="LabelSettings" id="LabelSettings_3d1pf"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_cnl38"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_yie7o"]
font_size = 40

[node name="Prog58b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1e3dx")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 371.0
offset_bottom = 109.0
text = "Enter number 1:"
label_settings = SubResource("LabelSettings_3d1pf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = 111.0
offset_right = 378.0
offset_bottom = 220.0
text = "Enter number 2:"
label_settings = SubResource("LabelSettings_cnl38")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = 227.0
offset_right = 377.0
offset_bottom = 336.0
text = "Enter number 3:"
label_settings = SubResource("LabelSettings_yie7o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 8.0
offset_right = 779.0
offset_bottom = 98.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 127.0
offset_right = 781.0
offset_bottom = 217.0

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 252.0
offset_right = 784.0
offset_bottom = 342.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 545.0
offset_right = 229.0
offset_bottom = 653.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 535.0
offset_right = 677.0
offset_bottom = 643.0
text = "Clear
"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 919.0
offset_top = 538.0
offset_right = 1148.0
offset_bottom = 646.0
text = "Exit
"

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 802.0
offset_top = 8.0
offset_right = 1147.0
offset_bottom = 218.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
